--- a/app/src/main/res/layout/github.xml
+++ b/app/src/main/res/layout/github.xml
@@ -65,6 +65,82 @@
                 android:layout_width="match_parent"
                 android:layout_height="15dp"/>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:background="#E0FFFF"
+                android:gravity="center">
+
+                <Button
+                    android:id="@+id/GH_btn1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:backgroundTint="#2196F3"
+                    android:text="1"/>
+
+                <Button
+                    android:id="@+id/GH_btn2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:backgroundTint="#2196F3"
+                    android:text="2"/>
+
+                <Button
+                    android:id="@+id/GH_btn3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:backgroundTint="#2196F3"
+                    android:text="3"/>
+
+                <Button
+                    android:id="@+id/GH_btn4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:backgroundTint="#2196F3"
+                    android:text="4"/>
+
+                <Button
+                    android:id="@+id/GH_btn5"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:backgroundTint="#2196F3"
+                    android:text="5"/>
+
+                <Button
+                    android:id="@+id/GH_btn6"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:backgroundTint="#2196F3"
+                    android:text="6"/>
+
+                <Button
+                    android:id="@+id/GH_btn7"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:backgroundTint="#2196F3"
+                    android:text="7"/>
+
+                <Button
+                    android:id="@+id/GH_btn8"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:backgroundTint="#2196F3"
+                    android:text="8"/>
+
+
+
+            </LinearLayout>
+
+
         </LinearLayout>
 
     </ScrollView>
