--- a/app/src/main/res/layout/java_programming.xml
+++ b/app/src/main/res/layout/java_programming.xml
@@ -68,53 +68,58 @@
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="1"
+                android:backgroundTint="#2196F3"
+                android:text="INTRODUCTION TO JAVA"
                 android:id="@+id/java_b1"/>
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="2"
+                android:backgroundTint="#2196F3"
+                android:text="OPERATORS AND STRINGS"
                 android:id="@+id/java_b2"/>
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="3"
+                android:backgroundTint="#2196F3"
+                android:text="CONDITIONAL STATEMENTS"
                 android:id="@+id/java_b3"/>
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="4"
+                android:backgroundTint="#2196F3"
+                android:text="METHODS IN JAVA"
                 android:id="@+id/java_b4"/>
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="5"
+                android:backgroundTint="#2196F3"
+                android:text="OOPS IN JAVA"
                 android:id="@+id/java_b5"/>
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="6"
+                android:backgroundTint="#2196F3"
+                android:text="ABSTRACT CLASS AND INTERFACES"
                 android:id="@+id/java_b6"/>
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="7"
+                android:backgroundTint="#2196F3"
+                android:text="PACKAGES"
                 android:id="@+id/java_b7"/>
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="8"
+                android:backgroundTint="#2196F3"
+                android:text="MULTITHREADING"
                 android:id="@+id/java_b8"/>
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="9"
+                android:backgroundTint="#2196F3"
+                android:text="ERROR AND EXCEPTION HANDLING"
                 android:id="@+id/java_b9"/>
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="10"
-                android:id="@+id/java_b10"/>
+
 
         </LinearLayout>
 
