--- a/app/src/main/res/layout/landing_page.xml
+++ b/app/src/main/res/layout/landing_page.xml
@@ -557,6 +557,17 @@
                     android:layout_centerInParent="true"
                     android:text="MOST IMPORTANT CODING QUESTIONS"/>
 
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="10dp"/>
+
+                <Button
+                    android:id="@+id/btn_roadmaps"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:text="ROADMAPS"/>
+
 
             </LinearLayout>
 
