software engineering,computer networks, github, sde sheet, web development resources features implemented.

--- a/app/src/main/res/layout/cpp_programming.xml
+++ b/app/src/main/res/layout/cpp_programming.xml
@@ -96,7 +96,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="#2196F3"
-                android:text="5"
+                android:text="MAPS"
                 android:id="@+id/cpp_b5"/>
             <Button
                 android:layout_width="match_parent"
@@ -110,8 +110,7 @@
                 android:backgroundTint="#2196F3"
                 android:text="ALGORITHMS"
                 android:id="@+id/cpp_b7"/>
-
-
+            
         </LinearLayout>
 
     </ScrollView>
