--- a/app/src/main/res/layout/sde_sheet.xml
+++ b/app/src/main/res/layout/sde_sheet.xml
@@ -65,6 +65,47 @@
                 android:layout_width="match_parent"
                 android:layout_height="15dp"/>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:background="#E0FFFF"
+                android:gravity="center">
+
+                <Button
+                    android:id="@+id/SDE_btn1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:backgroundTint="#2196F3"
+                    android:text="STRIVER SDE SHEET - DAY 01"/>
+
+                <Button
+                    android:id="@+id/SDE_btn2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:backgroundTint="#2196F3"
+                    android:text="STRIVER SDE SHEET - DAY 02"/>
+
+                <Button
+                    android:id="@+id/SDE_btn3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:backgroundTint="#2196F3"
+                    android:text="STRIVER SDE SHEET - DAY 03"/>
+
+                <Button
+                    android:id="@+id/SDE_btn4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:backgroundTint="#2196F3"
+                    android:text="STRIVER SDE SHEET - DAY 04"/>
+
+            </LinearLayout>
+
         </LinearLayout>
 
     </ScrollView>
