--- a/app/src/main/res/layout/dsa.xml
+++ b/app/src/main/res/layout/dsa.xml
@@ -77,6 +77,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
+                    android:backgroundTint="#2196F3"
                     android:text="ALGORITHMS"/>
 
                 <Button
@@ -84,6 +85,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
+                    android:backgroundTint="#2196F3"
                     android:text="ARRAYS"/>
 
                 <Button
@@ -91,6 +93,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
+                    android:backgroundTint="#2196F3"
                     android:text="BIT-MANIPULATION"/>
 
                 <Button
@@ -98,6 +101,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
+                    android:backgroundTint="#2196F3"
                     android:text="ALL IN ONE DSA RESOURCES"/>
 
                 <Button
@@ -105,6 +109,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
+                    android:backgroundTint="#2196F3"
                     android:text="DYNAMIC PROGRAMMING"/>
 
                 <Button
@@ -112,6 +117,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
+                    android:backgroundTint="#2196F3"
                     android:text="GRAPHS"/>
 
                 <Button
@@ -119,6 +125,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
+                    android:backgroundTint="#2196F3"
                     android:text="GREEDY"/>
 
                 <Button
@@ -126,6 +133,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
+                    android:backgroundTint="#2196F3"
                     android:text="HASHMAP"/>
 
                 <Button
@@ -133,6 +141,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
+                    android:backgroundTint="#2196F3"
                     android:text="LINKED LIST"/>
 
                 <Button
@@ -140,6 +149,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
+                    android:backgroundTint="#2196F3"
                     android:text="RECURSION AND BACKTRACKING"/>
 
                 <Button
@@ -147,6 +157,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
+                    android:backgroundTint="#2196F3"
                     android:text="STACKS AND QUEUES"/>
 
                 <Button
@@ -154,6 +165,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
+                    android:backgroundTint="#2196F3"
                     android:text="TIME COMPLEXITY ANALYSIS"/>
 
                 <Button
@@ -161,6 +173,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
+                    android:backgroundTint="#2196F3"
                     android:text="TREES"/>
 
             </LinearLayout>
