--- a/app/src/main/res/layout/javascript.xml
+++ b/app/src/main/res/layout/javascript.xml
@@ -36,7 +36,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/cn_heading"
+                android:text="@string/javascript_heading"
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="30dp"
@@ -45,7 +45,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/about_cn"
+                android:text="@string/about_javascript"
                 android:layout_marginLeft="5dp"
                 android:textSize="20dp"
                 android:justificationMode="inter_word"
@@ -55,7 +55,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Choose the resources from below"
+                android:text="Choose the topics from below"
                 android:textSize="20dp"
                 android:textStyle="bold"
                 android:textAlignment="center"
@@ -73,78 +73,84 @@
                 android:gravity="center">
 
                 <Button
-                    android:id="@+id/CN_btn1"
+                    android:id="@+id/Javascript_btn1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:backgroundTint="#2196F3"
-                    android:text="INTRODUCTION TO COMPUTER NETWORKS"/>
+                    android:text="INTRODUCTION TO JAVASCRIPT"/>
 
                 <Button
-                    android:id="@+id/CN_btn2"
+                    android:id="@+id/Javascript_btn2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:backgroundTint="#2196F3"
-                    android:text="OSI MODEL AND SUBNET"/>
+                    android:text="OBJECTS, PROPERTIES AND METHODS"/>
 
                 <Button
-                    android:id="@+id/CN_btn3"
+                    android:id="@+id/Javascript_btn3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:backgroundTint="#2196F3"
-                    android:text="DATA SHARING"/>
+                    android:text="ALERTS, PROMPTS AND CONFIRM"/>
 
                 <Button
-                    android:id="@+id/CN_btn4"
+                    android:id="@+id/Javascript_btn4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:backgroundTint="#2196F3"
-                    android:text="LAN TECHNOLOGIES"/>
+                    android:text="CONDITIONALS"/>
 
                 <Button
-                    android:id="@+id/CN_btn5"
+                    android:id="@+id/Javascript_btn5"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:backgroundTint="#2196F3"
-                    android:text="ETHERNET"/>
+                    android:text="ARRAYS IN JAVASCRIPT"/>
 
                 <Button
-                    android:id="@+id/CN_btn6"
+                    android:id="@+id/Javascript_btn6"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:backgroundTint="#2196F3"
-                    android:text="TOKEN RING"/>
+                    android:text="EVENT HANDLING"/>
 
                 <Button
-                    android:id="@+id/CN_btn7"
+                    android:id="@+id/Javascript_btn7"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:backgroundTint="#2196F3"
-                    android:text="COMPUTER NETWORKS NUMERICAL"/>
+                    android:text="WORKING WITH BROWSER WINDOWS"/>
 
                 <Button
-                    android:id="@+id/CN_btn8"
+                    android:id="@+id/Javascript_btn8"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:backgroundTint="#2196F3"
-                    android:text="UDP AND PROTOCOLS"/>
+                    android:text="WORKING WITH MULTIPLE WINDOWS"/>
 
                 <Button
-                    android:id="@+id/CN_btn9"
+                    android:id="@+id/Javascript_btn9"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:backgroundTint="#2196F3"
-                    android:text="TCP AND NUMERICAL"/>
+                    android:text="JAVASCRIPT AND MATHS"/>
 
-
+                <Button
+                    android:id="@+id/Javascript_btn10"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:backgroundTint="#2196F3"
+                    android:text="WORKING WITH DATES"/>
 
             </LinearLayout>
 
