--- a/app/src/main/res/layout/oops.xml
+++ b/app/src/main/res/layout/oops.xml
@@ -78,7 +78,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:backgroundTint="#2196F3"
-                    android:text="1"/>
+                    android:text="C++, OOPS IN C++"/>
 
                 <Button
                     android:id="@+id/OOPS_btn2"
@@ -86,7 +86,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:backgroundTint="#2196F3"
-                    android:text="2"/>
+                    android:text="JAVA, OOPS IN JAVA"/>
 
                 <Button
                     android:id="@+id/OOPS_btn3"
@@ -94,49 +94,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:backgroundTint="#2196F3"
-                    android:text="3"/>
-
-                <Button
-                    android:id="@+id/OOPS_btn4"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:backgroundTint="#2196F3"
-                    android:text="4"/>
-
-                <Button
-                    android:id="@+id/OOPS_btn5"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:backgroundTint="#2196F3"
-                    android:text="5"/>
-
-                <Button
-                    android:id="@+id/OOPS_btn6"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:backgroundTint="#2196F3"
-                    android:text="6"/>
-
-                <Button
-                    android:id="@+id/OOPS_btn7"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:backgroundTint="#2196F3"
-                    android:text="7"/>
-
-                <Button
-                    android:id="@+id/OOPS_btn8"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:backgroundTint="#2196F3"
-                    android:text="8"/>
-
-
+                    android:text="OOPS INTERVIEW QA"/>
 
             </LinearLayout>
 
