--- a/app/src/main/res/layout/system_design.xml
+++ b/app/src/main/res/layout/system_design.xml
@@ -77,6 +77,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
+                    android:backgroundTint="#2196F3"
                     android:text="Introduction and Roadmap to system design"/>
 
                 <Button
@@ -84,6 +85,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
+                    android:backgroundTint="#2196F3"
                     android:text="System Design Basics"/>
 
                 <Button
@@ -91,6 +93,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
+                    android:backgroundTint="#2196F3"
                     android:text="Advanced concepts of system design"/>
 
             </LinearLayout>
